--- a/browserstack.yml
+++ b/browserstack.yml
@@ -4,7 +4,7 @@
 # Add your BrowserStack userName and accessKey here or set BROWSERSTACK_USERNAME and
 # BROWSERSTACK_ACCESS_KEY as env variables
 userName: BROWSERSTACK_USERNAME
-accessKey: BROWSERSTACK_USERNAME
+accessKey: BROWSERSTACK_ACCESS_KEY
 
 # ======================
 # Organizing your tests
