--- a/browserstack.yml
+++ b/browserstack.yml
@@ -20,13 +20,26 @@ buildName: browserstack-build-1
 # Use `projectName` to set the name of your project. Example, Marketing Website
 projectName: BrowserStack Samples
 
+platforms:
+  - os: OS X
+    osVersion: Big Sur
+    browserName: Chrome
+    browserVersion: latest
+  - os: Windows
+    osVersion: 10
+    browserName: Edge
+    browserVersion: latest
+  - device: Samsung Galaxy S22 Ultra
+    browserName: chrome # Try 'samsung' for Samsung browser
+    osVersion: 12.0
+
 # ==========================================
 # BrowserStack Local
 # (For localhost, staging/private websites)
 # ==========================================
 # Set browserStackLocal to true if your website under test is not accessible publicly over the internet
 # Learn more about how BrowserStack Local works here -> https://www.browserstack.com/docs/automate/selenium/local-testing-introduction
-browserstackLocal: true # <boolean> (Default true)
+browserstackLocal: true # <boolean> (Default false)
 #browserStackLocalOptions:
 #   Options to be passed to BrowserStack local in-case of advanced configurations
 #  localIdentifier: browserStackSDK # <string> (Default: null) Needed if you need to run multiple instances of local.
