Made same as testng

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
+*.png
 target/
-.vscode
+local.log
+.idea
+*.iml
+.gradle
+build/
+.DS_Store
+.classpath
+.project
+.settings
 browserstack.err
-.idea/
-
+gradle
+gradlew
+gradlew.bat
+test-output
