--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
+*.png
 target/
-.vscode
+local.log
+.idea
+*.iml
+.gradle
+build/
+.DS_Store
 browserstack.err
-.idea/
+gradle/
+gradlew
+gradlew.bat
+logs/
