Made parallel test as default

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,9 @@
 
         <profile>
             <id>parallel</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
