--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
                 <version>2.18.1</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>config/single.testng.xml</suiteXmlFile>
+                        <suiteXmlFile>config/parallel.testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
