--- a/.github/workflows/maven-workflow-run.yml
+++ b/.github/workflows/maven-workflow-run.yml
@@ -1,7 +1,7 @@
 # This job is to test different maven profiles in sdk branch again Pull Request raised
 # This workflow targets Java with Maven execution
 
-name: TestNG SDK Test workflow for Maven on workflow_dispatch
+name: Java SDK Test workflow for Maven on workflow_dispatch
 
 on:
   workflow_dispatch:
@@ -19,7 +19,7 @@ jobs:
       matrix:
         java: [ '8', '11', '17' ]
         os: [ 'macos-latest', 'windows-latest', 'ubuntu-latest' ]
-    name: TestNG Repo ${{ matrix.Java }} - ${{ matrix.os }} Sample
+    name: Java-selenium Repo ${{ matrix.Java }} - ${{ matrix.os }} Sample
     env:
       BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
       BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975
         id: status-check-in-progress
         env:
-          job_name: TestNG Repo ${{ matrix.Java }} - ${{ matrix.os }} Sample
+          job_name: Java-selenium Repo ${{ matrix.Java }} - ${{ matrix.os }} Sample
           commit_sha: ${{ github.event.inputs.commit_sha }}
         with:
           github-token: ${{ github.token }}
@@ -69,7 +69,7 @@ jobs:
         id: status-check-completed
         env:
           conclusion: ${{ job.status }}
-          job_name: TestNG Repo ${{ matrix.Java }} - ${{ matrix.os }} Sample
+          job_name: Java-selenium Repo ${{ matrix.Java }} - ${{ matrix.os }} Sample
           commit_sha: ${{ github.event.inputs.commit_sha }}
         with:
           github-token: ${{ github.token }}
